<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background13"
    android:gravity="center"
    android:scaleType="fitXY"
    tools:context=".ConnectSQL.Accounts.LoginFragment">

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridlayout"
        android:layout_width="340dp"
        android:layout_height="360dp"
        android:layout_gravity="center"
        android:alpha="0.7"
        android:background="@drawable/radiusgrid"
        app:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="77dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ll"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/radiusimagesactivitylogin"
                android:src="@drawable/loginactivity2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:padding="2dp"
                    android:src="@drawable/user" />

                <EditText
                    android:id="@+id/edUsername"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/white"
                    android:hint="@string/inputusername"
                    android:paddingLeft="10dp"
                    android:textColor="#0033FF"
                    android:textColorHint="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:padding="2dp"
                    android:src="@drawable/pass" />

                <EditText
                    android:id="@+id/edPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/white"
                    android:hint="@string/inputpassword"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:textColor="#0033FF"
                    android:textColorHint="@color/colorPrimary" />
            </LinearLayout>


            <CheckBox
                android:id="@+id/chkRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/rememberme"
                android:textColor="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radiusbutton"
                    android:text="@string/btnlogin"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/radiusbutton"
                    android:text="Cancel"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="20dp" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.GridLayout>
</LinearLayout>